# xross-guitar-amp

./: Cargo.toml  README.md  build.rs  truce.toml
.cargo/: config.toml
.github/workflows/: release.yaml
src/: amp.rs  editor.rs  lib.rs  main.rs  params.rs  plugin.rs  utils.rs
src/amp/: cab.rs  eq.rs  gain.rs
src/amp/gain/: metal.rs  noise_gate.rs
src/editor/: background.rs  knob.rs  linear.rs  logo.rs  speaker.rs  stacked.rs
src/modules/: filter.rs  tube.rs
