[package]
name = "xross-guitar-amp"
version = "2.0.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "xross-guitar-amp-standalone"
path = "src/main.rs"
required-features = ["standalone"]

[features]
default = ["clap", "vst3", "standalone"]
clap = ["dep:truce-clap", "dep:clap-sys"]
vst3 = ["dep:truce-vst3"]
lv2 = ["dep:truce-lv2"]
standalone = ["dep:truce-standalone"]
shell = ["truce/shell"]

[dependencies]
truce = { git = "https://github.com/truce-audio/truce", tag = "v0.18.4" }
truce-egui = { git = "https://github.com/truce-audio/truce", tag = "v0.18.4" }
truce-gui = { git = "https://github.com/truce-audio/truce", tag = "v0.18.4" }
truce-clap = { git = "https://github.com/truce-audio/truce", tag = "v0.18.4", optional = true }
truce-vst3 = { git = "https://github.com/truce-audio/truce", tag = "v0.18.4", optional = true }
truce-lv2 = { git = "https://github.com/truce-audio/truce", tag = "v0.18.4", optional = true }
truce-standalone = { git = "https://github.com/truce-audio/truce", tag = "v0.18.4", features = ["gui"], optional = true }
clap-sys = { version = "0.5", optional = true }
egui = "0.31.1"
egui_extras = { version = "0.31.1", features = ["svg", "image"] }
image = "0.25.10"

[dev-dependencies]
truce-test = { git = "https://github.com/truce-audio/truce", tag = "v0.18.4" }

[build-dependencies]
truce-build = { git = "https://github.com/truce-audio/truce", tag = "v0.18.4" }

[profile.shell]
inherits = "release"
